refine UI and put an image capturing feature

--- a/assets/qgis_map/incident_report.html
+++ b/assets/qgis_map/incident_report.html
@@ -37,9 +37,9 @@
           <input id="search-input" type="text" placeholder="Search" autocomplete="off" />
           <button id="search-btn"><i class="fa fa-search"></i></button>
       </div>
-      <div id="warning-icon">
+      <!-- <div id="warning-icon">
         <i class="fa-solid fa-triangle-exclamation"></i>
-      </div>
+      </div> -->
     </div>
 
     <script>
